@@ -60,6 +60,13 @@ they occurred between. For more detailed information see the
 
 @item Make strings in sawfish-ui fully translatable [Alexey I. Froloff]
 @end itemize
+@item Widget Transistion:
+@itemize @minus
+
+@item Custom make-url-widget replaced by GtkLinkButton [Christopher Bratusek]
+
+@item GtkButton + GtkPreview + GtkColorSelection trio replaced by single GtkColorButton [Christopher Bratusek]
+@end itemize
 @item Other Changes:
 @itemize @minus
 
